--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "googleapis": "^144.0.0",
     "nan": "^2.22.0",
     "node": "^22.12.0",
+    "node-bin-darwin-arm64": "^23.5.0",
     "node-fetch": "^3.3.2",
     "quick.db": "^9.1.7"
   }
